--- a/index.html
+++ b/index.html
@@ -4,51 +4,515 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learn Python - Interactive Lessons</title>
-  <link rel="stylesheet" href="assets/styles.css">
   <link rel="manifest" href="pwa/manifest.json">
-  <meta name="theme-color" content="#4cafef">
+  <meta name="theme-color" content="#007AFF">
   <link rel="apple-touch-icon" href="pwa/icons/icon-180.png">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    :root {
+      --bg-primary: #ffffff;
+      --bg-secondary: #f5f5f7;
+      --bg-tertiary: #fbfbfd;
+      --text-primary: #1d1d1f;
+      --text-secondary: #86868b;
+      --accent: #007AFF;
+      --border: #d2d2d7;
+      --success: #34c759;
+      --warning: #ff9500;
+      --error: #ff3b30;
+      --sidebar-width: 280px;
+      --header-height: 52px;
+      --radius: 12px;
+      --radius-sm: 8px;
+    }
+
+    body.dark {
+      --bg-primary: #000000;
+      --bg-secondary: #1c1c1e;
+      --bg-tertiary: #2c2c2e;
+      --text-primary: #ffffff;
+      --text-secondary: #8e8e93;
+      --border: #38383a;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background: var(--bg-primary);
+      color: var(--text-primary);
+      height: 100vh;
+      overflow: hidden;
+      transition: background 0.3s ease;
+    }
+
+    /* Header */
+    .header {
+      height: var(--header-height);
+      background: rgba(255, 255, 255, 0.8);
+      backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(20px);
+      border-bottom: 1px solid var(--border);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 20px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 100;
+    }
+
+    body.dark .header {
+      background: rgba(28, 28, 30, 0.8);
+    }
+
+    .header-title {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 20px;
+      font-weight: 600;
+    }
+
+    .header-actions {
+      display: flex;
+      gap: 8px;
+    }
+
+    .theme-toggle {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      border: none;
+      background: var(--bg-secondary);
+      color: var(--text-primary);
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 18px;
+      transition: all 0.2s;
+    }
+
+    .theme-toggle:hover {
+      background: var(--bg-tertiary);
+      transform: scale(1.05);
+    }
+
+    /* Layout */
+    .app-container {
+      display: flex;
+      height: calc(100vh - var(--header-height));
+      margin-top: var(--header-height);
+    }
+
+    /* Sidebar */
+    .sidebar {
+      width: var(--sidebar-width);
+      background: var(--bg-secondary);
+      border-right: 1px solid var(--border);
+      display: flex;
+      flex-direction: column;
+      transition: transform 0.3s ease;
+    }
+
+    .sidebar-header {
+      padding: 20px;
+      border-bottom: 1px solid var(--border);
+    }
+
+    .sidebar-header h2 {
+      font-size: 16px;
+      font-weight: 600;
+      color: var(--text-secondary);
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+
+    .lesson-list {
+      flex: 1;
+      overflow-y: auto;
+      padding: 12px;
+    }
+
+    .lesson-list button {
+      width: 100%;
+      padding: 12px 16px;
+      margin-bottom: 4px;
+      background: transparent;
+      border: none;
+      border-radius: var(--radius-sm);
+      color: var(--text-primary);
+      text-align: left;
+      cursor: pointer;
+      font-size: 14px;
+      transition: all 0.2s;
+      position: relative;
+    }
+
+    .lesson-list button:hover {
+      background: var(--bg-tertiary);
+    }
+
+    .lesson-list button.active {
+      background: var(--accent);
+      color: white;
+    }
+
+    .lesson-list button.completed::after {
+      content: "✓";
+      position: absolute;
+      right: 16px;
+      color: var(--success);
+    }
+
+    /* Main Content */
+    .main-content {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+    }
+
+    /* Lesson Content */
+    .lesson-content {
+      flex: 1;
+      padding: 32px;
+      overflow-y: auto;
+      background: var(--bg-primary);
+    }
+
+    .lesson-content h2 {
+      font-size: 32px;
+      font-weight: 700;
+      margin-bottom: 16px;
+      background: linear-gradient(90deg, var(--accent), #5856d6);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .lesson-content h3 {
+      font-size: 24px;
+      font-weight: 600;
+      margin: 24px 0 12px;
+    }
+
+    .lesson-content h4 {
+      font-size: 18px;
+      font-weight: 600;
+      margin: 16px 0 8px;
+    }
+
+    .lesson-content p {
+      line-height: 1.6;
+      margin-bottom: 16px;
+      color: var(--text-primary);
+    }
+
+    .lesson-content pre {
+      background: var(--bg-secondary);
+      border: 1px solid var(--border);
+      border-radius: var(--radius-sm);
+      padding: 16px;
+      overflow-x: auto;
+      margin: 16px 0;
+      font-family: "SF Mono", Monaco, "Courier New", monospace;
+      font-size: 14px;
+    }
+
+    .lesson-content code {
+      background: var(--bg-secondary);
+      padding: 2px 6px;
+      border-radius: 4px;
+      font-family: "SF Mono", Monaco, "Courier New", monospace;
+      font-size: 0.9em;
+    }
+
+    /* Code Panel */
+    .code-panel {
+      height: 400px;
+      background: var(--bg-secondary);
+      border-top: 1px solid var(--border);
+      display: flex;
+      transition: height 0.3s ease;
+    }
+
+    .code-panel.collapsed {
+      height: 48px;
+    }
+
+    /* Editor */
+    .editor-container {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      border-right: 1px solid var(--border);
+    }
+
+    .panel-header {
+      height: 48px;
+      padding: 0 16px;
+      background: var(--bg-tertiary);
+      border-bottom: 1px solid var(--border);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .panel-header span {
+      font-size: 14px;
+      font-weight: 600;
+      color: var(--text-secondary);
+    }
+
+    .code-editor {
+      flex: 1;
+      padding: 16px;
+      background: var(--bg-primary);
+      border: none;
+      outline: none;
+      font-family: "SF Mono", Monaco, "Courier New", monospace;
+      font-size: 14px;
+      color: var(--text-primary);
+      resize: none;
+    }
+
+    /* Output */
+    .output-container {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .output {
+      flex: 1;
+      padding: 16px;
+      background: var(--bg-primary);
+      font-family: "SF Mono", Monaco, "Courier New", monospace;
+      font-size: 14px;
+      color: var(--text-primary);
+      overflow-y: auto;
+      white-space: pre-wrap;
+      margin: 0;
+    }
+
+    /* Buttons */
+    .btn {
+      padding: 8px 16px;
+      border-radius: var(--radius-sm);
+      border: none;
+      font-size: 14px;
+      font-weight: 500;
+      cursor: pointer;
+      transition: all 0.2s;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .btn-primary {
+      background: var(--accent);
+      color: white;
+    }
+
+    .btn-primary:hover {
+      background: #0051d5;
+      transform: translateY(-1px);
+    }
+
+    .btn-secondary {
+      background: var(--bg-tertiary);
+      color: var(--text-primary);
+    }
+
+    .btn-secondary:hover {
+      background: var(--border);
+    }
+
+    /* Sections */
+    .section-read {
+      margin-bottom: 24px;
+      padding: 20px;
+      background: var(--bg-secondary);
+      border-radius: var(--radius);
+    }
+
+    .section-example {
+      margin-bottom: 24px;
+      padding: 20px;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      border-radius: var(--radius);
+      color: white;
+    }
+
+    .section-example pre {
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      color: white;
+    }
+
+    .section-exercise {
+      margin-bottom: 24px;
+      padding: 20px;
+      background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+      border-radius: var(--radius);
+      color: white;
+    }
+
+    .section-quiz {
+      margin-bottom: 24px;
+      padding: 20px;
+      background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
+      border-radius: var(--radius);
+      color: white;
+    }
+
+    /* Mobile Responsive */
+    .menu-toggle {
+      display: none;
+      width: 40px;
+      height: 40px;
+      border: none;
+      background: transparent;
+      color: var(--text-primary);
+      cursor: pointer;
+      font-size: 24px;
+    }
+
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: block;
+      }
+
+      .sidebar {
+        position: fixed;
+        top: var(--header-height);
+        left: 0;
+        bottom: 0;
+        z-index: 50;
+        transform: translateX(-100%);
+      }
+
+      .sidebar.open {
+        transform: translateX(0);
+      }
+
+      .code-panel {
+        flex-direction: column;
+        height: 500px;
+      }
+
+      .editor-container {
+        border-right: none;
+        border-bottom: 1px solid var(--border);
+      }
+
+      .lesson-content {
+        padding: 20px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .header-title {
+        font-size: 18px;
+      }
+
+      .lesson-content h2 {
+        font-size: 24px;
+      }
+
+      .code-panel {
+        height: 400px;
+      }
+    }
+
+    /* Loading State */
+    .loading {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 40px;
+      color: var(--text-secondary);
+    }
+
+    .loading::after {
+      content: "";
+      width: 20px;
+      height: 20px;
+      margin-left: 10px;
+      border: 2px solid var(--border);
+      border-top-color: var(--accent);
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+
+    .error-banner {
+      background: var(--error);
+      color: white;
+      padding: 12px;
+      text-align: center;
+      display: none;
+    }
+  </style>
 </head>
 <body>
-  <header class="app-header">
-    <div class="header-title">
-      <h1>🐍 Learn Python</h1>
+  <div class="error-banner" id="errorBanner">
+    ⚠️ Python interpreter not loaded. Trying alternative sources...
+  </div>
+
+  <header class="header">
+    <div style="display: flex; align-items: center; gap: 12px;">
+      <button class="menu-toggle" id="menuToggle">☰</button>
+      <div class="header-title">
+        <span>🐍</span>
+        <span>Learn Python</span>
+      </div>
     </div>
     <div class="header-actions">
-      <button id="themeToggle">🌙</button>
+      <button class="theme-toggle" id="themeToggle">🌙</button>
     </div>
   </header>
 
-  <div class="app-layout">
-    <aside class="sidebar">
+  <div class="app-container">
+    <aside class="sidebar" id="sidebar">
       <div class="sidebar-header">
         <h2>Lessons</h2>
       </div>
       <div id="lessonList" class="lesson-list">
-        <div style="padding:8px;color:#9ca3af">Loading lessons...</div>
+        <div class="loading">Loading lessons</div>
       </div>
     </aside>
 
     <main class="main-content">
-      <div class="lesson-view">
-        <div id="lessonContent" class="lesson-content">
-          <p style="text-align: center; color: #9ca3af;">Select a lesson to begin</p>
+      <div class="lesson-content" id="lessonContent">
+        <div style="text-align: center; padding: 60px 20px;">
+          <h2 style="font-size: 48px; margin-bottom: 20px;">Welcome to Python</h2>
+          <p style="font-size: 20px; color: var(--text-secondary);">Select a lesson from the sidebar to begin your journey</p>
         </div>
       </div>
 
-      <div class="code-panel">
+      <div class="code-panel" id="codePanel">
         <div class="editor-container">
-          <div class="editor-header">
-            <span>Code Editor</span>
-            <button id="runBtn" class="run-btn">▶ Run</button>
+          <div class="panel-header">
+            <span>CODE EDITOR</span>
+            <button class="btn btn-primary" id="runBtn">▶ Run</button>
           </div>
           <textarea id="editor" class="code-editor" placeholder="# Write your Python code here..."></textarea>
         </div>
 
         <div class="output-container">
-          <div class="output-header">
-            <span>Output</span>
-            <button id="clearOutputBtn" class="clear-btn">Clear</button>
+          <div class="panel-header">
+            <span>OUTPUT</span>
+            <button class="btn btn-secondary" id="clearBtn">Clear</button>
           </div>
           <pre id="output" class="output"></pre>
         </div>
@@ -56,29 +520,108 @@
     </main>
   </div>
 
-  <!-- Skulpt Libraries - MUST be loaded BEFORE app.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/skulpt/0.11.1/skulpt.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/skulpt/0.11.1/skulpt-stdlib.js"></script>
-
-  <!-- Add a check to ensure Skulpt is loaded -->
+  <!-- Try multiple CDN sources with fallback -->
   <script>
-    // Wait for Skulpt to be available
-    if (typeof Sk === 'undefined') {
-      console.error('Skulpt failed to load! Python execution will not work.');
-      // Fallback: try to load from alternative CDN
-      var script1 = document.createElement('script');
-      script1.src = 'https://cdn.jsdelivr.net/npm/skulpt@0.11.1/dist/skulpt.min.js';
-      document.head.appendChild(script1);
-
-      var script2 = document.createElement('script');
-      script2.src = 'https://cdn.jsdelivr.net/npm/skulpt@0.11.1/dist/skulpt-stdlib.js';
-      document.head.appendChild(script2);
-    } else {
-      console.log('✅ Skulpt loaded successfully');
+    // Function to load script dynamically
+    function loadScript(src, onSuccess, onError) {
+      const script = document.createElement('script');
+      script.src = src;
+      script.onload = onSuccess;
+      script.onerror = onError;
+      document.head.appendChild(script);
     }
+
+    // Try to load Skulpt from multiple sources
+    const skulptSources = [
+      {
+        main: 'https://cdn.jsdelivr.net/npm/skulpt@0.11.1/dist/skulpt.min.js',
+        stdlib: 'https://cdn.jsdelivr.net/npm/skulpt@0.11.1/dist/skulpt-stdlib.js'
+      },
+      {
+        main: 'https://unpkg.com/skulpt@0.11.1/dist/skulpt.min.js',
+        stdlib: 'https://unpkg.com/skulpt@0.11.1/dist/skulpt-stdlib.js'
+      },
+      {
+        main: 'https://cdnjs.cloudflare.com/ajax/libs/skulpt/0.11.1/skulpt.min.js',
+        stdlib: 'https://cdnjs.cloudflare.com/ajax/libs/skulpt/0.11.1/skulpt-stdlib.js'
+      },
+      {
+        main: 'assets/libs/skulpt.min.js',
+        stdlib: 'assets/libs/skulpt-stdlib.js'
+      }
+    ];
+
+    let currentSourceIndex = 0;
+
+    function tryLoadSkulpt() {
+      if (currentSourceIndex >= skulptSources.length) {
+        console.error('Failed to load Skulpt from all sources');
+        document.getElementById('errorBanner').style.display = 'block';
+        document.getElementById('errorBanner').textContent = '❌ Python interpreter could not be loaded. Please check your internet connection.';
+        return;
+      }
+
+      const source = skulptSources[currentSourceIndex];
+      console.log(`Trying to load Skulpt from source ${currentSourceIndex + 1}/${skulptSources.length}: ${source.main}`);
+
+      loadScript(source.main, () => {
+        // Main script loaded, now load stdlib
+        loadScript(source.stdlib, () => {
+          console.log('✅ Skulpt loaded successfully from source ' + (currentSourceIndex + 1));
+          document.getElementById('errorBanner').style.display = 'none';
+        }, () => {
+          console.error('Failed to load Skulpt stdlib from source ' + (currentSourceIndex + 1));
+          currentSourceIndex++;
+          tryLoadSkulpt();
+        });
+      }, () => {
+        console.error('Failed to load Skulpt main from source ' + (currentSourceIndex + 1));
+        currentSourceIndex++;
+        tryLoadSkulpt();
+      });
+    }
+
+    // Start loading Skulpt
+    tryLoadSkulpt();
   </script>
 
-  <!-- Load app after Skulpt -->
   <script type="module" src="assets/app.js"></script>
+
+  <script>
+    // Theme Toggle
+    const themeToggle = document.getElementById('themeToggle');
+    const body = document.body;
+
+    // Load saved theme
+    const savedTheme = localStorage.getItem('theme') || 'light';
+    if (savedTheme === 'dark') {
+      body.classList.add('dark');
+      themeToggle.textContent = '☀️';
+    }
+
+    themeToggle.addEventListener('click', () => {
+      body.classList.toggle('dark');
+      const isDark = body.classList.contains('dark');
+      themeToggle.textContent = isDark ? '☀️' : '🌙';
+      localStorage.setItem('theme', isDark ? 'dark' : 'light');
+    });
+
+    // Mobile Menu Toggle
+    const menuToggle = document.getElementById('menuToggle');
+    const sidebar = document.getElementById('sidebar');
+
+    menuToggle.addEventListener('click', () => {
+      sidebar.classList.toggle('open');
+    });
+
+    // Close sidebar when clicking outside on mobile
+    document.addEventListener('click', (e) => {
+      if (window.innerWidth <= 768) {
+        if (!sidebar.contains(e.target) && !menuToggle.contains(e.target)) {
+          sidebar.classList.remove('open');
+        }
+      }
+    });
+  </script>
 </body>
 </html>
