--- a/index.html
+++ b/index.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- PWA Manifest -->
+<link rel="manifest" href="/manifest.webmanifest">
+
+<!-- Theme Color -->
+<meta name="theme-color" content="#3776ab">
+
+<!-- Apple Touch Icon -->
+<link rel="apple-touch-icon" href="/assets/icon-192.png">
+
+<!-- Apple Mobile Web App Capable -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="Learn Python">
+
+<!-- Microsoft Tiles -->
+<meta name="msapplication-TileImage" content="/assets/icon-144.png">
+<meta name="msapplication-TileColor" content="#3776ab">
+
+<!-- Content Security Policy -->
+<meta http-equiv="Content-Security-Policy" 
+      content="default-src 'self'; 
+               script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net; 
+               style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; 
+               font-src 'self' https://fonts.gstatic.com; 
+               img-src 'self' data: https:; 
+               connect-src 'self' https://api.github.com;">
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learn Python - Interactive Lessons</title>
@@ -954,6 +981,9 @@
 
     // Initialize progress
     updateProgress();
+    
+  <!-- Service Worker Registration -->
+<script src="/sw-register.js"></script>
   </script>
 </body>
 </html>
